package dextro.app;

import dextro.command.Command;
import dextro.command.CommandHistory;
import dextro.command.CommandResult;
import dextro.exception.ParseException;
import dextro.exception.CommandException;
import dextro.model.record.StudentDatabase;
import dextro.parser.Parser;
import dextro.ui.Ui;

public class App {

    private final Parser parser;
    private final StudentDatabase db;
    private final Ui ui;
    private final CommandHistory history;

    public App(Ui ui, Parser parser, StudentDatabase db) {
        this.ui = ui;
        this.parser = parser;
        this.db = db;
        this.history = new CommandHistory();
        parser.setCommandHistory(history);
    }

    public void run() {
        System.out.println("Welcome to Dextro Student Manager!");

        while (true) {
            System.out.print("> ");

            String input = ui.readCommand();
            if (input == null) {
                break;
            }
            try {
                Command command = parser.parse(input);
                CommandResult result = command.execute(db);
                Ui.show(result.getMessage());

                // Add command to history if it's undoable
                if (command.isUndoable()) {
                    history.push(command);
                }

                if (result.shouldExit()) {
                    break;
                }

            } catch (ParseException | CommandException | IllegalArgumentException e) {
                Ui.show("Error: " + e.getMessage());
            } catch (Exception e) {
                Ui.show("Unexpected error: " + e.getMessage());
                e.printStackTrace();
            }
        }
    }
}
